--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,11 @@ main {
   justify-content: center;
   width: 100%;
 }
+.gd-fondo-blanco {
+  background-color: rgb(59, 58, 58);
+  padding: 18px;
+  border-radius: 9px;
+  box-shadow: 0px 0px 10px #444444;
+  border: none;
+  cursor: pointer;
+}
