--- a/src/components/Desafio.css
+++ b/src/components/Desafio.css
@@ -5,3 +5,11 @@
   border-radius: 9px;
   padding: 15px;
 }
+.gd-desafio-blanco {
+  margin-top: 20px;
+  background-color: #6e6e6e;
+  box-shadow: 0px 0px 10px #6e6e6e;
+  border-radius: 9px;
+  padding: 15px;
+  color: rgb(32, 32, 32);
+}
