--- a/src/App.css
+++ b/src/App.css
@@ -81,3 +81,43 @@ main {
   justify-content: center;
   gap: 10px;
 }
+@media (max-width: 720px) {
+  header {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .gd-generar,
+  .gd-generar-blanco {
+    flex-direction: column;
+    gap: 5px;
+    padding: 15px;
+    width: 90%;
+  }
+
+  .gd-crear,
+  .gd-crear-blanco {
+    gap: 10px;
+    padding: 20px;
+  }
+
+  .gd-boton-generar,
+  .gd-fondo-oscuro,
+  .gd-fondo-blanco,
+  input {
+    width: 30%;
+    padding: 10px;
+    text-align: center;
+  }
+
+  input {
+    width: 100%;
+    padding: 8px;
+  }
+
+  main {
+    flex-direction: column;
+    gap: 15px;
+  }
+}
